; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd.c_gdImageSetAAPixelColor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd.c_gdImageSetAAPixelColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32** }

@gdAlphaOpaque = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32, i32, i32, i32)* @gdImageSetAAPixelColor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gdImageSetAAPixelColor(%struct.TYPE_4__* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @gdTrueColorGetRed(i32 %18)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @gdTrueColorGetGreen(i32 %20)
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @gdTrueColorGetBlue(i32 %22)
  store i32 %23, i32* %13, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @gdImageGetPixel(%struct.TYPE_4__* %24, i32 %25, i32 %26)
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @gdTrueColorGetRed(i32 %28)
  store i32 %29, i32* %15, align 4
  %30 = load i32, i32* %14, align 4
  %31 = call i32 @gdTrueColorGetGreen(i32 %30)
  store i32 %31, i32* %16, align 4
  %32 = load i32, i32* %14, align 4
  %33 = call i32 @gdTrueColorGetBlue(i32 %32)
  store i32 %33, i32* %17, align 4
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %11, align 4
  %38 = call i32 @BLEND_COLOR(i32 %34, i32 %35, i32 %36, i32 %37)
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* %12, align 4
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %12, align 4
  %43 = call i32 @BLEND_COLOR(i32 %39, i32 %40, i32 %41, i32 %42)
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* %13, align 4
  %46 = load i32, i32* %17, align 4
  %47 = load i32, i32* %13, align 4
  %48 = call i32 @BLEND_COLOR(i32 %44, i32 %45, i32 %46, i32 %47)
  %49 = load i32, i32* %11, align 4
  %50 = load i32, i32* %12, align 4
  %51 = load i32, i32* %13, align 4
  %52 = load i32, i32* @gdAlphaOpaque, align 4
  %53 = call i32 @gdTrueColorAlpha(i32 %49, i32 %50, i32 %51, i32 %52)
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  %56 = load i32**, i32*** %55, align 8
  %57 = load i32, i32* %8, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i32*, i32** %56, i64 %58
  %60 = load i32*, i32** %59, align 8
  %61 = load i32, i32* %7, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %60, i64 %62
  store i32 %53, i32* %63, align 4
  ret void
}

declare dso_local i32 @gdTrueColorGetRed(i32) #1

declare dso_local i32 @gdTrueColorGetGreen(i32) #1

declare dso_local i32 @gdTrueColorGetBlue(i32) #1

declare dso_local i32 @gdImageGetPixel(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @BLEND_COLOR(i32, i32, i32, i32) #1

declare dso_local i32 @gdTrueColorAlpha(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
